--- a/MillionAndUp.APISecurity/appsettings.json
+++ b/MillionAndUp.APISecurity/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "MillionAndUpPruebaTecnicaSecuriy{}DanieLondono1234.",
-    "Issuer": ""
+    "Issuer": "",
+    "Audience":""
   }
 }
