Implementing JWT security, password encryption and decryption algorithm with md5 and secret encryption key

--- a/MillionAndUp.Aplication/MillionAndUp.Aplication.csproj
+++ b/MillionAndUp.Aplication/MillionAndUp.Aplication.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MillionAndUp.Common\MillionAndUp.Common.csproj" />
     <ProjectReference Include="..\MillionAndUp.Domain\MillionAndUp.Domain.csproj" />
     <ProjectReference Include="..\MillionAndUp.Infrastructure\MillionAndUp.Infrastructure.csproj" />
   </ItemGroup>
